XX JAN 2014 - V X.X.X.X
   Bug #133 - FIXED - Insert paste is not working correctly and undo doesn't undo every change, you lose events at the end of the line.
   Bug #134 - FIXED - Color's don't update in profile editing screen when you exit from color dialog.

09 JAN 2014 - V 0.2.9.1
   Bug #132 - Fixed - Pressing shift for paste preview could cause data to be undone.  Now useing F3 key to do paste preview.

08 JAN 2014 - V 0.2.8.1
   Bug #131 - Fixed - Crash when changing sort order on toolbar and then changing again in profile manager.
   Added two new preference items under the general tab
      1) Auto save tool bars (A 2014 Feature Request!)
      2) Number of recent files under the File menu (5 to 20)
   Save crosshair state (A 2014 Feature Request!)
   Save waveform state (A 2014 Feature Request!)
   Paste Preview - Hold down the  (use F3 as of 0.2.9.1) key when in the event grid to see how pasting will look before pasting! (A 2014 Feature Request!)
   Event bookmarks. Hold down shift-ctrl-1 through shift-ctrl-9 to set/reset a event bookmark, and press ctrl-1 through ctrl-9 to move there.
   Auto range play select.  If Event bookmark 1 and 9 are defined, that is what will play if you click Play Range (Alt-F6) (A 2014 Feature Request!)
   Minor internal refactoring.

01 JAN 2014 - V 0.2.1.1
    Bug #123 - FIXED - J1Sys plugin crashes on context menu click (right-click)
    Bug #124 - FIXED - Text in channel mapper pop-up for saving prompt has \n\n
    Bug #125 - FIXED - Profile editing, some controls are not anchored properly.
    Bug #126 - FIXED - Channel Mapper not removing channels that were placed by mistake and then deleted.
    Bug #127 - FIXED - Paste full channel events doesn't work right if a group is selected.
    Bug #128 - FIXED - Selecting a large area and then moving the selection box might cause an exception.
    Bug #129 - FIXED - Sparkle not rendering correctly when you have percentage selected instead of value.